--- a/src/App.css
+++ b/src/App.css
@@ -43,6 +43,16 @@ body {
   box-sizing: border-box;
 }
 
+/* ICON STYLING */
+.icon__film {
+  color: #fff;
+  font-size: 1.5rem;
+  margin-right: 10px;
+}
+
+.icon__add {
+}
+
 .btn {
   padding: 10px 15px;
   background-color: var(--secondary);
@@ -91,8 +101,8 @@ header a {
   transition: all 0.3s ease;
 }
 
-header a:hover {
-  opacity: 0.7;
+.link__color:hover {
+  color: #f06666;
 }
 
 header .brand a {
